k8s/theerapakg-moe-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theerapakg-moe-web
  labels:
    app: theerapakg-moe-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theerapakg-moe-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: theerapakg-moe-web
    spec:
      containers:
        - name: theerapakg-moe-web
          image: <IMAGE>
          ports:
            - containerPort: 3000
              name: theerapakg-moe-web-svc
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: theerapakg-moe-web-service
spec:
  ports:
    - protocol: TCP
      port: 30000
      targetPort: theerapakg-moe-web-svc
  selector:
    app: theerapakg-moe-web
