k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theerapakg-moe-ingress
spec:
  rules:
    - host: do.theerapakg.moe
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: theerapakg-moe-web-service
                port:
                  number: 30000
